--- a/i3/config
+++ b/i3/config
@@ -172,3 +172,6 @@ bindsym $mod+Control+l exec /home/heisenberg/Codes/scripts/lock.sh
 bindsym XF86AudioRaiseVolume    exec amixer set Master 5%+
 bindsym XF86AudioLowerVolume    exec amixer set Master 5%-
 bindsym XF86AudioMute           exec amixer set Master toggle
+
+# Take screenshot when printscreen button is pressed
+bindsym Print exec scrot -u '%Y-%m-%d_$wx$h.png' -e 'mv $f ~/Pictures/Screenshots/'
